Fix for bug 374362 - build failure with -enable-accessibility using OSX10.3.9SDK. r=hwaara