accessible/src/mac/mozTextAccessible.mm
@@ -40,7 +40,9 @@ extern const NSString *kTopLevelUIElementAttribute;   // NSAccessibilityTopLevel
                                                            NSAccessibilityTitleAttribute,
                                                            NSAccessibilityValueAttribute, // required
                                                            NSAccessibilitySubroleAttribute,
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_4
                                                            NSAccessibilityRoleDescriptionAttribute,
+#endif
                                                            NSAccessibilityPositionAttribute, // required
                                                            NSAccessibilitySizeAttribute, // required
                                                            NSAccessibilityWindowAttribute, // required
@@ -194,7 +196,9 @@ extern const NSString *kTopLevelUIElementAttribute;   // NSAccessibilityTopLevel
                                                            NSAccessibilityTitleAttribute,
                                                            NSAccessibilityValueAttribute, // required
                                                            NSAccessibilityHelpAttribute,
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_4
                                                            NSAccessibilityRoleDescriptionAttribute,
+#endif
                                                            NSAccessibilityPositionAttribute, // required
                                                            NSAccessibilitySizeAttribute, // required
                                                            NSAccessibilityWindowAttribute, // required
@@ -219,8 +223,10 @@ extern const NSString *kTopLevelUIElementAttribute;   // NSAccessibilityTopLevel
 - (NSArray *)accessibilityActionNames
 {
   if ([self isEnabled]) {
-    return [NSArray arrayWithObjects:NSAccessibilityConfirmAction, 
-                                     NSAccessibilityShowMenuAction, 
+    return [NSArray arrayWithObjects:NSAccessibilityConfirmAction,
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_4
+                                     NSAccessibilityShowMenuAction,
+#endif
                                      nil];
   }
   return nil;
@@ -228,8 +234,10 @@ extern const NSString *kTopLevelUIElementAttribute;   // NSAccessibilityTopLevel
 
 - (NSString *)accessibilityActionDescription:(NSString *)action
 {
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_4
   if ([action isEqualToString:NSAccessibilityShowMenuAction])
     return @"show menu";
+#endif
   if ([action isEqualToString:NSAccessibilityConfirmAction])
     return @"confirm";
     
@@ -240,8 +248,10 @@ extern const NSString *kTopLevelUIElementAttribute;   // NSAccessibilityTopLevel
 {
   // both the ShowMenu and Click action do the same thing.
   if ([self isEnabled]) {
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_4
     if ([action isEqualToString:NSAccessibilityShowMenuAction])
       [self showMenu];
+#endif
     if ([action isEqualToString:NSAccessibilityConfirmAction])
       [self confirm];
   }
